@@ -8,6 +8,8 @@
 	* il_states.c/.h: Updated with newer file formats.
 	* il_blp.c:649: Fixed ilNewImageFull call to use color index.
 			   659: Fixed memcpy from base image to new mipmap.
+	* il_dcx.c, il_exr.cpp and many more: Checks return value of ilFixImage now.
+	* il_iff.c:271: Got rid of ilConvertImage call.
 
 2009-03-06 Denton Woods <doomwiz@users.sf.net>
 	* Updated VC8 projects to use il_mp3.c.
